<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="IO_OP10_MP" Id="{4c4cfb6d-505e-4a67-8d1d-c6d8dc50aaee}">
    <Declaration><![CDATA[
VAR_GLOBAL
		I10A_SPARE_I300_0						: BOOL;
		I10A_SPARE_I300_1                       : BOOL;
		I10A_SPARE_I300_2                       : BOOL;
		I10A_SPARE_I300_3                       : BOOL;
		I10A_SPARE_I300_4                       : BOOL;
		I10A_SPARE_I300_5                       : BOOL;
		I10A_SPARE_I300_6                       : BOOL;
		I10A_SPARE_I300_7                       : BOOL;
		I10A_SPARE_I301_0                       : BOOL;
		I10A_SPARE_I301_1                       : BOOL;
		I10A_SPARE_I301_2                       : BOOL;
		I10A_SPARE_I301_3                       : BOOL;
		I10A_SPARE_I301_4                       : BOOL;
		I10A_SPARE_I301_5                       : BOOL;
		I10A_SPARE_I301_6                       : BOOL;
		I10A_SPARE_I301_7                       : BOOL;
		
		I10B_DRUM_FEED_ALRM_I302_0              : BOOL;
		I10A_SPARE_I302_1                       : BOOL;
		I10B_DRUM_OFF_ON_I302_2                 : BOOL;
		I10B_DRUM_CONV_REV_I302_3               : BOOL;
		I10B_DRUM_CONV_FWD_I302_4               : BOOL;
		I10B_ROB_MAN_AUTO_MODE_I302_5           : BOOL;
		I10B_SPARE_I302_6                       : BOOL;
		I10B_SPARE_I302_7                       : BOOL;
		I10B_SPARE_I303_0                       : BOOL;
		I10B_SPARE_I303_1                       : BOOL;
		I10B_SPARE_I303_2                       : BOOL;
		I10B_SPARE_I303_3                       : BOOL;
		I10B_SPARE_I303_4                       : BOOL;
		I10B_SPARE_I303_5                       : BOOL;
		I10B_SPARE_I303_6                       : BOOL;
		I10B_SPARE_I303_7                       : BOOL;
		
		I30_DRUM_FEED_ALRM_I304_0               : BOOL;
		I30_SPARE_I304_1                        : BOOL;
		I30_DRUM_OFF_ON_I304_2                  : BOOL;
		I30_DRUM_CONV_REV_I304_3                : BOOL;
		I30_DRUM_CONV_FWD_I304_4                : BOOL;
		I30_SPARE_I304_5                        : BOOL;
		I30_SPARE_I304_6                        : BOOL;
		I30_SPARE_I304_7                        : BOOL;
		I40_ATC_DECLAMP_FB_I305_0               : BOOL;
		I40_ATC_CLAMP_FB_I305_1                 : BOOL;
		I40_ATC_STN_POKE_YOKE_1_I305_2          : BOOL;
		I40_ATC_STN_POKE_YOKE_2_I305_3          : BOOL;
		I40_ATC_STN_POKE_YOKE_3_I305_4          : BOOL;
		I40_ATC_STN_POKE_YOKE_4_I305_5          : BOOL;
		I40_ATC_SLAVE_MODL1_I305_6              : BOOL;
		I40_ATC_SLAVE_MODL2_I305_7              : BOOL;
		
		I50_DRUM_FEED_ALRM_I306_0               : BOOL;
		I50_SPARE_I306_1                        : BOOL;
		I50_DRUM_OFF_ON_I306_2                  : BOOL;
		I50_DRUM_CONV_REV_I306_3                : BOOL;
		I50_DRUM_CONV_FWD_I306_4                : BOOL;
		I50_SPARE_I306_5                        : BOOL;
		I50_SPARE_I306_6                        : BOOL;
		I50_SPARE_I306_7                        : BOOL;
		I60_ATC_DECLAMP_FB_I307_0               : BOOL;
		I60_ATC_CLAMP_FB_I307_1                 : BOOL;
		I60_ATC_STN_POKE_YOKE_1_I307_2          : BOOL;
		I60_ATC_STN_POKE_YOKE_2_I307_3          : BOOL;
		I60_ATC_STN_POKE_YOKE_3_I307_4          : BOOL;
		I60_ATC_STN_POKE_YOKE_4_I307_5          : BOOL;
		I60_ATC_SLAVE_MODL1_I307_6              : BOOL;
		I60_ATC_SLAVE_MODL2_I307_7              : BOOL;
		
		I70_DRUM_FEED_ALRM_I308_0              : BOOL;
		I70_SPARE_I308_1                        : BOOL;
		I70_DRUM_OFF_ON_I308_2                  : BOOL;
		I70_DRUM_CONV_REV_I308_3                : BOOL;
		I70_DRUM_CONV_FWD_I308_4                : BOOL;
		I70_SPARE_I308_5                        : BOOL;
		I70_SPARE_I308_6                        : BOOL;
		I70_SPARE_I308_7                        : BOOL;
		I80_ATC_DECLAMP_FB_I309_0               : BOOL;
		I80_ATC_CLAMP_FB_I309_1                 : BOOL;
		I80_ATC_STN_POKE_YOKE_1_I309_2          : BOOL;
		I80_ATC_STN_POKE_YOKE_2_I309_3          : BOOL;
		I80_ATC_STN_POKE_YOKE_3_I309_4          : BOOL;
		I80_ATC_STN_POKE_YOKE_4_I309_5          : BOOL;
		I80_ATC_SLAVE_MODL1_I309_6              : BOOL;
		I80_ATC_SLAVE_MODL2_I309_7              : BOOL;
		
		I80_SPARE_I310_0                        : BOOL;
		I80_SPARE_I310_1                        : BOOL;
		I80_SPARE_I310_2                        : BOOL;
		I80_SPARE_I310_3                        : BOOL;
		I80_SPARE_I310_4                        : BOOL;
		I80_SPARE_I310_5                        : BOOL;
		I80_SPARE_I310_6                        : BOOL;
		I80_SPARE_I310_7                        : BOOL;
		I80_SPARE_I311_0                        : BOOL;
		I80_SPARE_I311_1                        : BOOL;
		I80_SPARE_I311_2                        : BOOL;
		I80_SPARE_I311_3                        : BOOL;
		I80_SPARE_I311_4                        : BOOL;
		I80_SPARE_I311_5                        : BOOL;
		I80_SPARE_I311_6                        : BOOL;
		I80_SPARE_I311_7                        : BOOL;		
		
		O10_XTS_GREASE_VALVE_ON_Q300_0					: BOOL;
		O10A_SPARE_Q300_1								: BOOL;
		O10A_SPARE_Q300_2                               : Bool;
		O10A_SPARE_Q300_3                               : Bool;
		O10A_SPARE_Q300_4                               : Bool;
		O10A_SPARE_Q300_5                               : Bool;
		O10_BARLIGHT_OP1_Q300_6                         : Bool;
		O10_BARLIGHT_OP2_Q300_7                         : Bool;
		O10A_BDY_EMPT_CAM_LGHT1_ON_Q301_0               : Bool;
		O10A_BDY_EMPT_CAM_LGHT2_ON_Q301_1               : Bool;
		O10A_FIRTREE_ORING_CAM_LGHT1_ON_Q301_2          : Bool;
		O10A_FIRTREE_ORING_CAM_LGHT2_ON_Q301_3          : Bool;
		O10A_ORING_CAM_LGHT1_ON_Q301_4                  : Bool;
		O10A_ORING_CAM_LGHT2_ON_Q301_5                  : Bool;
		O10A_FIRTREE_ORING_CAMBAR_LGHT1_ON_Q301_6       : Bool;
		O10A_SPARE_Q301_7                               : Bool;
		
		O10B_DRUM_MTR_FWD_Q302_0                        : Bool;
		O10B_DRUM_RST_Q302_1                            : Bool;
		O10B_DRUM_EXT_SPEED_Q302_2                      : Bool;
		O10A_SPARE_Q302_3_Q302_3                        : Bool;
		O10B_DRUM_RUN_IND_Q302_4                        : Bool;
		O10_TWR_LMP_RD_Q302_5                           : Bool;
		O10_TWR_LMP_GN_Q302_6                           : Bool;
		O10_TWR_LMP_YELW_Q302_7                         : Bool;
		O10_TWR_LMP_BUZZ_Q303_0                         : Bool;
		O10B_SPARE_Q303_1 		                        : Bool;
		O10B_FIRTREE_ORING_CAM_LGHT1_ON_Q303_2          : Bool;
		O10B_FIRTREE_ORING_CAM_LGHT2_ON_Q303_3          : Bool;
		O10B_ORING_CAM_LGHT1_ON_Q303_4                  : Bool;
		O10B_ORING_CAM_LGHT2_ON_Q303_5                  : Bool;
		O10B_FIRTREE_ORING_CAMBAR_LGHT1_ON_Q303_6       : Bool;
		O10B_SPARE_Q303_7                               : BOOL;
		
		O20_SPARE_Q304_0                                : Bool;
		O20_SPARE_Q304_1                                : Bool;
		O20_SPARE_Q304_2                                : Bool;
		O20_SPARE_Q304_3                                : Bool;
		O30_DRUM_MTR_FWD_Q304_4                         : Bool;
		O30_DRUM_RST_Q304_5                             : Bool;
		O30_DRUM_EXT_SPEED_Q304_6                       : Bool;
		O30_SPARE_Q304_7_Q304_7                         : Bool;
		O30_DRUM_RUN_IND_Q305_0                         : Bool;
		O30_CAM_LGHT1_ON_Q305_1                         : Bool;
		O30_CAM_LGHT2_ON_Q305_2                         : Bool;
		O30_SPARE_Q305_3                                : Bool;
		O30_SPARE_Q305_4                                : Bool;
		O50_DRUM_MTR_FWD_Q305_5                         : Bool;
		O50_DRUM_RST_Q305_6                             : Bool;
		O50_SPARE_Q305_7                                : Bool;
		
		O50_DRUM_EXT_SPEED_Q306_0                       : Bool;
		O50_SPARE_Q306_1                                : Bool;
		O50_DRUM_RUN_IND_Q306_2                         : Bool;
		O50_CAM_LGHT1_ON_Q306_3                         : Bool;
		O50_CAM_LGHT2_ON_Q306_4                         : Bool;
		O50_SPARE_Q306_5                                : Bool;
		O50_SPARE_Q306_6                                : Bool;
		O50_BARLIGHT_OP1_Q306_7                         : Bool;
		O50_BARLIGHT_OP2_Q307_0                         : Bool;
		O70_DRUM_MTR_FWD_Q307_1                         : BOOL;
		O70_DRUM_RST_Q307_2                             : Bool;
		O70_DRUM_EXT_SPEED_Q307_3                       : Bool;
		O70_SPARE_Q307_4                                : Bool;
		O70_DRUM_RUN_IND_Q307_5                         : Bool;
		O70_CAM_LGHT1_ON_Q307_6                         : Bool;
		O70_CAM_LGHT2_ON_Q307_7                         : Bool;
		
		O70_BARLIGHT_OP1_Q308_0                         : Bool;
		O70_BARLIGHT_OP2_Q308_1                         : Bool;
		O70_SPARE_Q308_2                                : Bool;
		O70_SPARE_Q308_3                                : Bool;
		O70_SPARE_Q308_4                                : Bool;
		O70_SPARE_Q308_5                                : Bool;
		O70_SPARE_Q308_6                                : Bool;
		O70_SPARE_Q308_7                                : Bool;
		O70_SPARE_Q309_0                                : Bool;
		O70_SPARE_Q309_1                                : Bool;
		O70_SPARE_Q309_2                                : Bool;
		O70_SPARE_Q309_3                                : Bool;
		O70_SPARE_Q309_4                                : Bool;
		O70_SPARE_Q309_5                                : Bool;
		O70_SPARE_Q309_6                                : Bool;
		O70_SPARE_Q309_7                                : Bool;		
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>